Remove the hasAcceptableCapacity() method from QueueMetadataProvider